2008-02-08  Laurent Belmonte  <laurent.belmonte@gmail.com>

	* src/ui/ui-main.c: (ui_main_new), (leave_fullscreen),
	(window_state_event): add leave fullscreen action,menuitem and method

2008-02-08  Laurent Belmonte  <laurent.belmonte@gmail.com>

	* src/ui/ui-main.c: (fullscreen): implement simple fullscreen

2008-02-08  Laurent Belmonte  <laurent.belmonte@gmail.com>

	* src/ui/ui-main.c: (frame_event): listen window state and change
	fullscreen action state

2008-02-08  Laurent Belmonte  <laurent.belmonte@gmail.com>

	* src/ui/ui-main.c: (ui_main_new), (frame_event): listen window state,
	dummy code behind

2008-02-08  Laurent Belmonte  <laurent.belmonte@gmail.com>

	* src/ui/ui-main.c: (ui_main_new): add fullscreen menuitem to ui
	string

2008-02-08  Laurent Belmonte  <laurent.belmonte@gmail.com>

	* src/ui/ui-main.c: (ui_main_new), (fullscreen): add fullscreen
	GtkActionEntry and dummy fullscreen callback

2008-02-08  Sven Herzberg  <sven@imendio.com>

	* src/ui/ui-main.c: (ui_main_new): set up the vbox' child widgets in
	the proper order, so we don't have to reorder the box again

2008-02-08  Sven Herzberg  <sven@imendio.com>

	* src/ui/ui-main.c: (ui_main_new): let maemo use the same variables
	for the menu as gnome does

2008-02-08  Sven Herzberg  <sven@imendio.com>

	* src/ui/ui-main.c: (ui_main_new): updated indentation of the GNOME
	menu structure

2008-02-08  Sven Herzberg  <sven@imendio.com>

	* src/ui/ui-main.c: (ui_main_new): adjusted the maemo menu to comply
	with the maemo style guidelines
	(http://test.maemo.org/community/hildon_ui.html)

2008-02-08  Sven Herzberg  <sven@imendio.com>

	* src/ui/ui-main.c: (ui_main_new): merged the destroy handlers for the
	main window

2008-02-08  Sven Herzberg  <sven@imendio.com>

	* src/ui/ui-main.c: (ui_main_new): share the "Quit" menu item between
	GNOME and Maemo

2008-02-08  Sven Herzberg  <sven@imendio.com>

	* src/ui/ui-main.c: (ui_main_new), (ui_main_enabled_games_item),